--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,6 @@
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#00aaff",
+  "theme_color": "#00aaff"
 
 }
